--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "db.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "testUser": "jest tests/user.test.js",
     "start": "nodemon src/server.js"
   },
   "author": "",
@@ -13,8 +13,10 @@
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
     "express-validator": "^6.14.2",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.5",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "supertest": "^6.3.1"
   }
 }
